Шапка (адаптив), главный экран (адаптив), раздел Why Us (адаптив), раздел Streaming (адаптив), раздел Reviews (адаптив)

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,26 @@
 <header class="header">
-    
+    <div class="header__container">
+		<a href="#" class="logo header__logo"><img src="@img/logo.svg" alt=""></a>
+		<div class="menu">
+			<div class="menu__wrap">
+				<button class="burger is-active menu__burger" data-menu-close><span></span><span></span><span></span></button>
+				<div class="menu__content">
+					<ul class="menu__list">
+						<li><a href="#" class="link">About us</a></li>
+						<li><a href="#" class="link">Solution</a></li>
+						<li><a href="#" class="link">Pricing</a></li>
+					</ul>
+					<div class="menu__tools">
+						<a href="#" class="link header__tools-item header__tools-item_login">Login</a>
+						<a href="#" class="link header__tools-item header__tools-item_free">Try for free</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="header__tools">
+			<a href="#" class="link header__tools-item header__tools-item_login">Login</a>
+			<a href="#" class="link header__tools-item header__tools-item_free">Try for free</a>
+		</div>
+		<button class="burger header__burger" data-menu-open><span></span><span></span><span></span></button>
+	</div>
 </header>
