--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,27 @@
-<footer class="footer">
-    
+<footer class="footer has-bg-dark">
+	<div class="footer__container">
+		<div class="footer__content">
+			<div class="footer__info">
+				<a href="#" class="logo footer__logo"><img src="@img/logo.svg" alt=""></a>
+				<span class="copyright footer__info-copyright">Copyright 2022 © Transcodix</span>
+			</div>
+			<nav class="footer__menu">
+				<ul class="footer__menu-list">
+					<li><a href="#" class="link">Privacy policy</a></li>
+					<li><a href="#" class="link">Terms of service</a></li>
+					<li><a href="#" class="link">Sitemap</a></li>
+				</ul>
+			</nav>
+			<span class="copyright footer__content-copyright">Copyright 2022 © Transcodix</span>
+		</div>
+		<form action="#" class="footer__callback">
+			<label class="tf">
+				<div class="tf__field is-textarea">
+					<textarea name="user-message"></textarea>
+					<span class="tf__label">Your message</span>
+				</div>
+			</label>
+			<button class="btn is-border is-light footer__callback-btn">Contact us</button>
+		</form>
+	</div>
 </footer>
