Поменял иллюстрации на png формат

--- a/src/main.html
+++ b/src/main.html
@@ -100,8 +100,8 @@
 										</div>
 										<div class="solut-stream__ill-img">
 											<picture>
-												<source srcset="@img/ills/transcoding-mob.svg" media="(max-width: 600px)">
-												<img src="@img/ills/transcoding.svg" alt="">
+												<source srcset="@img/ills/transcoding-mob.png" media="(max-width: 600px)">
+												<img src="@img/ills/transcoding.png" alt="">
 											</picture>
 										</div>
 									</div>
@@ -135,7 +135,7 @@
 													</div>
 													<span class="solut-cdn__ill-what">Your <br>traffic</span>
 												</div>
-												<div class="solut-cdn__ill-img"><img src="@img/ills/without-cdn.svg" alt=""></div>
+												<div class="solut-cdn__ill-img"><img src="@img/ills/without-cdn.png" alt=""></div>
 											</div>
 										</div>
 										<div class="solut-cdn__ill is-with-cdn">
@@ -150,7 +150,7 @@
 													</div>
 													<span class="solut-cdn__ill-what">Your <br>traffic</span>
 												</div>
-												<div class="solut-cdn__ill-img"><img src="@img/ills/with-cdn.svg" alt=""></div>
+												<div class="solut-cdn__ill-img"><img src="@img/ills/with-cdn.png" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -202,7 +202,7 @@
 									<h3 class="solut__subtitle">Media storage <span>(Coming soon)</span></h3>
 								</div>
 								<div class="solut-media__body">
-									<div class="solut-media__ill"><img src="@img/ills/cloud-ill.svg" alt=""></div>
+									<div class="solut-media__ill"><img src="@img/ills/cloud-ill.png" alt=""></div>
 									<div class="solut-media__content">
 										<p class="solut-media__text">Using the storage you get the access to different features including the security and permission settings, API integrations  and ability to manage files</p>
 										<button class="btn is-accent solut-media__btn">Notify me</button>
