--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         const catalog = {
             "Общие страницы": {
                 "Главная страница": "main.html",
+                "О нас": "about.html",
             },
         }
     </script>
