--- a/src/main.html
+++ b/src/main.html
@@ -11,11 +11,11 @@
 	<div class="wrapper">
 
 		<main class="main has-bg-dark">
-			@@include('html/header.html',{})
+			@@include('html/header.html',{ "classes": "page-index has-logo-stable" })
 
 			<div class="main__container">
 				<h1 class="main__title has-contour has-circle">
-					<span class="main__title-text">The new wave of <br>Video streaming solutions</span>
+					The new wave of <br>Video streaming solutions
 					<div class="contour is-light main__title-contour"></div>
 				</h1>
 				<div class="main-advant">
@@ -93,9 +93,9 @@
 								<div class="solut-stream__body">
 									<div class="solut-stream__ill">
 										<div class="solut-stream__ill-content">
-											<div class="solut-stream__ill-text-block has-contour has-circle">
-												<span class="solut-stream__ill-text">5 times profitable</span>
-												<span class="contour is-light solut-stream__ill-contour"></span>
+											<div class="solut-stream__ill-text has-contour has-circle">
+												5 times profitable
+												<span class="contour is-light solut-stream__ill-text-contour"></span>
 											</div>
 										</div>
 										<div class="solut-stream__ill-img">
@@ -129,9 +129,9 @@
 											</div>
 											<div class="solut-cdn__ill-body">
 												<div class="solut-cdn__ill-content">
-													<div class="solut-cdn__ill-text-block has-contour has-circle">
-														<span class="solut-cdn__ill-text">CONTENT</span>
-														<span class="contour is-light solut-cdn__ill-contour"></span>
+													<div class="solut-cdn__ill-text has-contour has-circle">
+														CONTENT
+														<span class="contour is-light solut-cdn__ill-text-contour"></span>
 													</div>
 													<span class="solut-cdn__ill-what">Your <br>traffic</span>
 												</div>
@@ -144,9 +144,9 @@
 											</div>
 											<div class="solut-cdn__ill-body">
 												<div class="solut-cdn__ill-content">
-													<div class="solut-cdn__ill-text-block has-contour has-circle">
-														<span class="solut-cdn__ill-text">CONTENT</span>
-														<span class="contour is-light solut-cdn__ill-contour"></span>
+													<div class="solut-cdn__ill-text has-contour has-circle">
+														CONTENT
+														<div class="contour is-light solut-cdn__ill-text-contour"></div>
 													</div>
 													<span class="solut-cdn__ill-what">Your <br>traffic</span>
 												</div>
