--- a/src/about.html
+++ b/src/about.html
@@ -22,12 +22,16 @@
 					</div>
 					<div class="explan__body">
 						<div class="explan__content">
-							<p>
-								We are an IT project that helps streamers around the world to make the streaming process simple and efficient. We have developed a <b>unique transcoding technology</b>, which can be customized for any needs.
-							</p>
-							<p>
-								Thanks to machine learning, it can process any video formats and any codecs, starting with the most popular(H264, VP9, H265, AV1) and ending with the rare ones in use ( Apple ProRes, X264 etc).
-							</p>
+							<div class="explan__content-text">
+								<p>
+									We are an IT project that helps streamers around the world to make the streaming process simple and efficient. We have developed a <b>unique transcoding technology</b>, which can be customized for any needs.
+								</p>
+							</div>
+							<div class="explan__content-text">
+								<p>
+									Thanks to machine learning, it can process any video formats and any codecs, starting with the most popular(H264, VP9, H265, AV1) and ending with the rare ones in use ( Apple ProRes, X264 etc).
+								</p>
+							</div>
 						</div>
 						<a href="#" class="btn is-accent explan__btn">Try now for free</a>
 					</div>
