--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
             "Общие страницы": {
                 "Главная страница": "main.html",
                 "О нас": "about.html",
+                // "Transcoding": "transcoding.html",
+                // "CDN": "cdn.html",
             },
         }
     </script>
