--- a/src/main.html
+++ b/src/main.html
@@ -75,7 +75,20 @@
 							</p>
 							<a href="#" class="btn is-accent stream__btn">try now for free</a>
 						</div>
-						<div class="stream__img"><img src="@img/streaming.png" alt=""></div>
+						<div class="stream__slider-container">
+							<div class="stream__slider-bg"><img src="@img/stream/imac.png" alt=""></div>
+							<div class="stream__slider">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide stream__slider-img"><div class="stream__img"><img src="@img/stream/stream-1.jpg" alt=""></div></div>
+									<div class="swiper-slide stream__slider-img"><div class="stream__img"><img src="@img/stream/stream-2.jpg" alt=""></div></div>
+									<div class="swiper-slide stream__slider-img"><div class="stream__img"><img src="@img/stream/stream-3.jpg" alt=""></div></div>
+								</div>
+							</div>
+						</div>
+						<!-- <div class="stream__slider">
+
+						</div> -->
+						<!-- <div class="stream__img"><img src="@img/stream/imac.png" alt=""></div> -->
 					</div>
 				</div>
 			</section>
