Все сделал с адаптивом, кроме калькулятора

--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -1,8 +1,34 @@
-<!-- <div class="modal" data-modal-id="modal" data-close-on-bg>
-    <div class="modal__wrap">
-        <div class="modal__window">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum adipisci deserunt atque quis! Iure autem aut impedit velit? Maxime non quo voluptate porro doloribus officia ea accusamus harum ab alias!</p>
-            <button class="burger is-active modal-close" data-modal-close>
+<div class="modal m-plan" data-modal-id="personal-plan" data-close-on-bg>
+    <div class="modal__wrap m-plan__wrap">
+        <div class="modal__window m-plan__window">
+			<div class="m-plan__content">
+				<h2 class="m-plan__title">Get my personal plan</h2>
+				<form action="#" class="solut-pp__form m-plan__form">
+					<div class="solut-pp__form-wrap">
+						<label class="tf solut-pp__tf">
+							<div class="tf__field">
+								<input type="text" name="user-">
+								<span class="tf__label">Name</span>
+							</div>
+						</label>
+						<label class="tf has-icon solut-pp__tf solut-pp__tf-phone">
+							<div class="tf__field">
+								<input type="text" name="user-">
+								<span class="tf__label">+__ (___) ___ __-__</span>
+							</div>
+						</label>
+						<label class="tf solut-pp__tf">
+							<div class="tf__field">
+								<input type="email" name="user-">
+								<span class="tf__label">E-mail</span>
+							</div>
+						</label>
+						<button class="btn is-border is-light solut-pp__form-submit">Try now</button>
+					</div>
+				</form>
+			</div>
+
+			<button class="burger is-active modal-close" data-modal-close>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -10,4 +36,23 @@
         </div>
         <div class="modal__bg"></div>
     </div>
-</div> -->
+</div>
+
+<div class="modal m-loop" data-modal-id="stay-loop" data-close-on-bg>
+    <div class="modal__wrap m-loop__wrap">
+        <div class="modal__window m-loop__window">
+			<div class="m-loop__content">
+				<h2 class="m-loop__title">Stay in the loop</h2>
+				<p class="m-loop__text">Join 101,315 readers who get 6 new video tips in their inbox every Monday</p>
+				<button class="btn is-border is-light m-loop__btn">Yes, please</button>
+			</div>
+
+			<button class="burger is-active modal-close" data-modal-close>
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+        <div class="modal__bg"></div>
+    </div>
+</div>
