--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,12 @@
             "Общие страницы": {
                 "Главная страница": "main.html",
                 "О нас": "about.html",
-                // "Transcoding": "transcoding.html",
-                // "CDN": "cdn.html",
+                "Transcoding": "transcoding.html",
+                "CDN": "cdn.html",
+            },
+            "Модальные окна": {
+                "Get my personal plan": "main.html#personal-plan",
+                "Stay in the loop": "about.html#stay-loop",
             },
         }
     </script>
