--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -106,7 +106,6 @@
 					</div>
 					<div class="trans-how__body">
 						<div class="trans-how__ill">
-							<!-- <h3 class="trans-how__ill-title">Perfomance</h3> -->
 							<div class="trans-how__ill-img">
 								<picture>
 									<source srcset="@img/ills/transcoding-how-work-mob.png" media="(max-width: 600px)">
@@ -114,10 +113,101 @@
 								</picture>
 							</div>
 						</div>
-						<div class="th-table">
-							<div class="th-table__header">
-								<div class="th-table__ceil">
-									
+						<div class="th-table__list">
+							<div class="th-table is-first">
+								<div class="th-table__header">
+									<div class="th-table__row">
+										<div class="th-table__ceil">
+											<span>Input protocols</span>
+										</div>
+										<div class="th-table__ceil">
+											<span>Codecs</span>
+										</div>
+									</div>
+								</div>
+								<div class="th-table__body">
+									<div class="th-table__row">
+										<div class="th-table__ceil">
+											<span>RTMP</span>
+											<span>RTSP</span>
+											<span>SRT</span>
+											<span>Icecast</span>
+											<span>RIST</span>
+										</div>
+										<div class="th-table__ceil has-table">
+											<div class="th-table">
+												<div class="th-table__body">
+													<div class="th-table__row">
+														<div class="th-table__ceil">
+															<span>VIDEO</span>
+														</div>
+														<div class="th-table__ceil">
+															<span>H264</span>
+															<span>VP9, H265 (coming soon)</span>
+															<span>Any required codec on demand</span>
+														</div>
+													</div>
+													<div class="th-table__row">
+														<div class="th-table__ceil">
+															<span>VIDEO</span>
+														</div>
+														<div class="th-table__ceil">
+															<span>HE-AAC + v1 & v2, MPEG1 Part1/2, Speex, G.711, Opus, Vorbis</span>
+														</div>
+													</div>
+												</div>
+											</div>
+											<!-- <div class="th-table__ceil-block">
+
+
+											</div> -->
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="th-table is-second">
+								<div class="th-table__header">
+									<div class="th-table__row">
+										<div class="th-table__ceil">
+											<span>Resolution</span>
+										</div>
+										<div class="th-table__ceil">
+											<span>Output protocols</span>
+										</div>
+										<div class="th-table__ceil">
+											<span>Bitrate</span>
+										</div>
+									</div>
+								</div>
+								<div class="th-table__body">
+									<div class="th-table__row">
+										<div class="th-table__ceil has-strokes">
+											<span>240</span>
+											<span>360</span>
+											<span>480</span>
+											<span>720</span>
+											<span>1080</span>
+											<span>4K</span>
+											<span>8K</span>
+										</div>
+										<div class="th-table__ceil has-strokes">
+											<span>HLS</span>
+											<span>MPEG-DASH</span>
+											<span>RTMP</span>
+											<span>RTSP</span>
+											<span>SLDP</span>
+											<span>Icecast</span>
+										</div>
+										<div class="th-table__ceil has-strokes">
+											<span>300 kbps</span>
+											<span>500 kbps</span>
+											<span>1000 kbps</span>
+											<span>1500-2250 kbps</span>
+											<span>3000-4500 kbps</span>
+											<span>13000-20000 kbps</span>
+											<span>25000-100000 kbps</span>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
