на главной странице добавил второй раздел на первый экран

--- a/src/main.html
+++ b/src/main.html
@@ -10,26 +10,26 @@
 <body>
 	<div class="wrapper">
 
-		<main class="main has-bg-dark">
-			@@include('html/header.html',{ "classes": "page-index has-logo-stable" })
+		<div class="main-first-screen">
+			<main class="main has-bg-dark">
+				@@include('html/header.html',{ "classes": "page-index has-logo-stable" })
 
-			<div class="main__container">
-				<h1 class="main__title has-contour has-circle">
-					The new wave of <br>Video streaming solutions
-					<div class="contour is-light main__title-contour"></div>
-				</h1>
-				<div class="main-advant">
-					<div class="main-advant__list">
-						<span class="main-advant__item">Unique</span>
-						<span class="main-advant__item">Modern</span>
-						<span class="main-advant__item">Secure</span>
+				<div class="main__container">
+					<h1 class="main__title has-contour has-circle">
+						The new wave of <br>Video streaming solutions
+						<div class="contour is-light main__title-contour"></div>
+					</h1>
+					<div class="main-advant">
+						<div class="main-advant__list">
+							<span class="main-advant__item">Unique</span>
+							<span class="main-advant__item">Modern</span>
+							<span class="main-advant__item">Secure</span>
+						</div>
 					</div>
+					<button class="btn is-light is-border main__cta">Try now for free</button>
 				</div>
-				<button class="btn is-light is-border main__cta">Try now for free</button>
-			</div>
-		</main>
-		<div class="content">
-			<section class="section why-us">
+			</main>
+			<section class="why-us">
 				<div class="why-us__container">
 					<div class="s-header">
 						<h2 class="s-header__title">Why us</h2>
@@ -61,10 +61,12 @@
 					</div>
 				</div>
 			</section>
+		</div>
+		<div class="content">
 			<section class="section stream">
 				<div class="stream__container">
 					<div class="s-header stream__header">
-						<h2 class="s-header__title">Video streaming for Buisnesses & Organizations</h2>
+						<h2 class="s-header__title">Video streaming for Buisnesses&nbsp;&&nbsp;Organizations</h2>
 					</div>
 					<div class="stream__body">
 						<div class="stream__content">
