--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -214,6 +214,42 @@
 					</div>
 				</div>
 			</section>
+			<section class="section calc" style="display:none;">
+				<div class="calc__container">
+					<div class="s-header">
+						<h2 class="s-header__title">Calculator</h2>
+					</div>
+					<div class="calc__body">
+						<div class="calc__section">
+							<h3 class="calc__section-title">Live Transcoding pricing</h3>
+							<div class="calc__block is-trans">
+								<div class="calc__tools">
+									<div class="calc-range__block">
+										<div class="calc-range__header">
+											<span class="calc__title">Hours of source video:</span>
+											<label class="tf">
+												<div class="tf__field">
+													<input type="text" name="user-">
+												</div>
+											</label>
+										</div>
+										<div class="calc-range__body">
+											<div class="calc-range"></div>
+											<div class="calc-range__info">
+												<span class="calc-range__value is-min">1</span>
+												<span class="calc-range__value is-max">100</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="calc__info">
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 
         @@include('html/footer.html',{})
