--- a/src/html/header.html
+++ b/src/html/header.html
@@ -24,7 +24,7 @@
 								<ul class="sub-menu">
 									<li><a href="#" class="link">Transcoding</a></li>
 									<li><a href="#" class="link">CDN</a></li>
-									<li><a href="#" class="link">CDN</a></li>
+									<li><a href="#" class="link">Media Storage</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="link">Pricing</a></li>
