--- a/src/html/header.html
+++ b/src/html/header.html
@@ -42,5 +42,5 @@
 			</div>
 			<button class="burger header__burger" data-menu-open><span></span><span></span><span></span></button>
 		</div>
-	</d>
+	</div>
 </header>
