страница Media storage

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 "О нас": "about.html",
                 "Transcoding": "transcoding.html",
                 "CDN": "cdn.html",
-                // "CDN": "cdn.html",
+                "Media storage": "media-storage.html",
             },
             "Модальные окна": {
                 "Get my personal plan": "main.html#personal-plan",
