--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="wrapper">
 
-		@@include('html/header.html',{ "classes": "page-transcoding" })
+		@@include('html/header.html',{ "classes": "page-transcoding without-main-screen" })
 		<div class="content page-transcoding">
 			<section class="section explan">
 				<div class="explan__container">
