--- a/src/cdn.html
+++ b/src/cdn.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="wrapper">
 
-		@@include('html/header.html',{ "classes": "page-transcoding" })
+		@@include('html/header.html',{ "classes": "cdn without-main-screen" })
 		<div class="content page-transcoding">
 			<section class="section explan">
 				<div class="explan__container">
