страница регистрации и входа

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
                 "Transcoding": "transcoding.html",
                 "CDN": "cdn.html",
                 "Media storage": "media-storage.html",
+                "Log in": "login.html",
+                "Sign up": "signup.html",
             },
             "Модальные окна": {
                 "Get my personal plan": "main.html#personal-plan",
