--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -262,7 +262,7 @@
 											<span class="calc-setting__title">Transcode to:</span>
 											<div class="calc-setting__list">
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="transcode-to" value="360p" checked>
+													<input type="checkbox" name="transcode-to" value="360p">
 													<span>360p</span>
 												</div>
 												<div class="calc-setting__radio">
@@ -270,7 +270,7 @@
 													<span>720p</span>
 												</div>
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="transcode-to" value="1080p" checked>
+													<input type="checkbox" name="transcode-to" value="1080p">
 													<span>1080p</span>
 												</div>
 												<div class="calc-setting__radio">
@@ -312,20 +312,20 @@
 											</button>
 											<div class="acc__body" data-acc-body>
 												<div class="acc__content">
-													<div class="calc-range__block is-bitrate">
+													<div class="calc-range__block is-bitrate has-fraction">
 														<div class="calc-range__header">
 															<span class="calc__title">Input stream Bitrate:</span>
 															<label class="tf calc-range__tf">
 																<div class="tf__field">
-																	<input type="text" name="user-" data-only-digit min="1" max="120" value="1">
+																	<input type="text" name="user-" data-only-digit min="0" max="100000" value="100000">
 																</div>
 															</label>
 														</div>
 														<div class="calc-range__body">
-															<div class="calc-range"></div>
+															<div class="calc-range" data-value-rec="0.75"></div>
 															<div class="calc-range__info">
 																<span class="calc-range__value is-min">1</span>
-																<span class="calc-range__value is-max">120</span>
+																<span class="calc-range__value is-max">100k</span>
 															</div>
 														</div>
 													</div>
