--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -287,19 +287,19 @@
 											<span class="calc-setting__title">FPS:</span>
 											<div class="calc-setting__list">
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="fps" value="<30">
+													<input type="radio" name="fps" value="<30">
 													<span>&lt;30</span>
 												</div>
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="fps" value="30-60" checked>
+													<input type="radio" name="fps" value="30-60" checked>
 													<span>30-60</span>
 												</div>
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="fps" value="60-90">
+													<input type="radio" name="fps" value="60-90">
 													<span>60-90</span>
 												</div>
 												<div class="calc-setting__radio">
-													<input type="checkbox" name="fps" value="90-120">
+													<input type="radio" name="fps" value="90-120">
 													<span>90-120</span>
 												</div>
 											</div>
@@ -317,7 +317,7 @@
 															<span class="calc__title">Input stream Bitrate:</span>
 															<label class="tf calc-range__tf">
 																<div class="tf__field">
-																	<input type="text" name="user-" data-only-digit min="0" max="100000" value="100000">
+																	<input type="text" name="user-" data-only-digit min="0" max="100000" value="50000">
 																</div>
 															</label>
 														</div>
