--- a/src/transcoding.html
+++ b/src/transcoding.html
@@ -228,7 +228,7 @@
 											<span class="calc__title">Hours of source video:</span>
 											<label class="tf calc-range__tf">
 												<div class="tf__field" data-value="0">
-													<input type="text" name="user-" data-only-digit min="1" max="1000000" value="400">
+													<input type="text" name="user-" data-only-digit min="1" max="8760" value="1">
 												</div>
 											</label>
 										</div>
@@ -322,7 +322,7 @@
 															</label>
 														</div>
 														<div class="calc-range__body">
-															<div class="calc-range" data-value-rec="0.75"></div>
+															<div class="calc-range"></div>
 															<div class="calc-range__info">
 																<span class="calc-range__value is-min">1</span>
 																<span class="calc-range__value is-max">100k</span>
